--- a/Project1Clustering.Rmd
+++ b/Project1Clustering.Rmd
@@ -22,15 +22,41 @@ tele_data$pdaysdummy <- ifelse(tele_data$pdays == 999, 0, 1)
 tele_data$pdays <- NULL
 
 str(tele_data)
+
+telemm <- as.data.frame(model.matrix(~.-1,tele_data))
+str(telemm)
+
+set.seed(12345)
+tele_random <- telemm[sample(nrow(telemm)),]
+
+#Normalize the data
+normalize <- function(x) {
+  return ((x - min(x)) / (max(x) - min(x)))
+}
+
+# we are going to normalize everything 
+tele_norm <- as.data.frame(lapply(tele_random, normalize))
 ```
 
 ## Training unsupervised learning models
 ```{r}
-categories <- tele_data[1:2]
-write.csv(categories, "categories.csv")
+# changing categories to grab the 2 to end column 
+#categories <- tele_data[2:54]
+#write.csv(categories, "categories.csv")
 
-# categories_z <- as.data.frame(lapply(categories, scale))
-# tele_clusters <- kmeans(categories_z, 2)
+categories <- tele_norm #tele_norm is normalized using the normalize function we wrote 
+categories$yyes <- NULL
+
+
+categories_z <- as.data.frame(lapply(categories, scale)) # run on the normalized data so it is all numeric
+set.seed(12345)
+tele_clusters <- kmeans(categories_z, 5) 
+tele_clusters$centers
+tele_norm$cluster <- tele_clusters$cluster # puth the cluster number with each tele record - classify what the cluster numbers mean later as a group
+
+# figure out how to get the yyes for a cluster
+#tele$y_num <- ifelse(tele$y=="yes", 1, 0)
+aggregate(data = tele_norm, yyes ~ cluster, mean) # this gives the success rate at this point
 ```
 
 
